fix minor layout issue

--- a/app/assets/stylesheets/_variables.scss
+++ b/app/assets/stylesheets/_variables.scss
@@ -2,5 +2,6 @@ $indigo: #3F51B5;
 $dark-indigo: #303F9F;
 $danger: #E51C23;
 $black: #000;
-$dark-grey: #333;
+$dark-grey: rgba(0,0,0,0.78);
+$grey: rgba(0,0,0,0.5);
 $navbar-text: #b2dbfb;
